--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
-    "inversify": "6.0.1"  
+    "inversify": "6.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "11.1.2",
     "@swc/core": "1.3.70",
     "@types/express": "4.17.17",
+    "@types/inversify": "^2.0.33",
     "prisma": "5.0.0",
     "ts-node": "10.9.1",
     "tsup": "7.1.0",
