--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
-    "inversify": "6.0.1"
+    "inversify": "6.0.1",
+    "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "11.1.2",
