--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - postgres
     volumes:
       - .:/home/root/app
-    ports:
-      - 3333:3333
+    # ports:
+    #   - 3333:3333
     environment:
       NODE_ENV: homologation
       PORT: 3333
