--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev:server": "tsx watch src/shared/infra/server.ts",
     "start": "npx prisma generate && npx prisma migrate deploy && yarn tsup src --out-dir build && node build/shared/infra/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "npx autocannon -c 500 -d 30 localhost"
   },
   "prisma": {
     "schema": "./prisma/schema.prisma"
@@ -27,6 +28,7 @@
     "@swc/core": "1.3.70",
     "@types/express": "4.17.17",
     "@types/inversify": "^2.0.33",
+    "autocannon": "^7.14.0",
     "prisma": "5.0.0",
     "ts-node": "10.9.1",
     "tsup": "7.1.0",
