--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,15 @@ services:
     environment:
       NODE_ENV: homologation
       PORT: 3333
-      DATABASE_URL: postgresql://postgres:1234@postgres:5432/example-db?schema=public
+      DATABASE_URL: postgresql://postgres:1234@postgres:5432/example-db?schema=public&connection_limit=400&pool_timeout=20
 
     networks:
       - backbone
+
   postgres:
     image: postgres
     restart: always
+    command: postgres -c 'max_connections=500' -c 'log_error_verbosity=terse'
     environment:
       POSTGRES_DB: example-db
       POSTGRES_USER: postgres
