--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     restart: on-failure
     depends_on:
       - postgres
+      - redis
     volumes:
       - .:/home/root/app
     # ports:
     #   - 3333:3333
     environment:
       NODE_ENV: homologation
+      REDIS_URL: redis://redis:6379
       PORT: 3333
       DATABASE_URL: postgresql://postgres:1234@postgres:5432/example-db?schema=public&connection_limit=400&pool_timeout=20
 
@@ -35,6 +37,12 @@ services:
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./public:/var/www
+    networks:
+      - backbone
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
     networks:
       - backbone
 
