--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "5.0.0",
     "@types/node": "20.4.2",
+    "bull": "^4.11.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "11.1.2",
     "@swc/core": "1.3.70",
+    "@types/bull": "^4.10.0",
     "@types/express": "4.17.17",
     "@types/inversify": "^2.0.33",
     "autocannon": "^7.14.0",
